--- a/src/main/resources/templates/users1.html
+++ b/src/main/resources/templates/users1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
     <title>USERS</title>
 </head>
 <body>
@@ -45,7 +44,7 @@
                     <div class="panel-title bg-light">
                         <h3>All users</h3>
                     </div>
-                    <table class="table bg-white">
+                    <table class="table bg-white" th:id="usersTable">
                         <thead>
                         <tr>
                             <th>id</th>
@@ -59,7 +58,7 @@
                             <th>delete</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody th:id="usersTbody">
                         <tr th:each="user : ${users}">
 
                             <td th:text="${user.id}">ID</td>
@@ -293,5 +292,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="../static/js/users.js"></script>
 </body>
 </html>
