--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,11 +2,30 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>USERS</title>
+    <!--<script type="text/javascript" src="users.js"></script>-->
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+<!--<script type="text/javascript">
+    $(document).ready(function () {
+        $.getJSON('http://localhost:8080/admin/users', function (json) {
+            var tr = [];
+            for (var i = 0; i < json.length; i++) {
+                tr.push('<tr>');
+                tr.push('<td>' + json[i].id + '</td>');
+                tr.push('<td>' + json[i].name + '</td>');
+                tr.push('<td>' + json[i].surname + '</td>');
+                tr.push('<td>' + json[i].age + '</td>');
+                tr.push('<td>' + json[i].username + '</td>');
+                tr.push('<td>' + json[i].password + '</td>');
+                tr.push('</tr>');
+            }
+            $('usersTbody').append($(tr.join('')));
+        })
+    });
+</script>-->
 <body>
 <nav class="navbar navbar-dark bg-dark shadow mb-2">
     <!--<div th:object="${user}">
@@ -68,7 +87,7 @@
                             </table>
                         </div>
 
-                        <!--New user tab -->
+                        <!--New user tab-->
                         <div class="tab-pane fade col-lg-2" id="nav-new-user" role="tabpanel"
                              aria-labelledby="nav-newuser-tab">
 
@@ -107,7 +126,7 @@
     </div>
 </div>
 
-<!--Edit user modal window -->
+<!--Edit user modal window-->
 <div class="modal fade" id="editUser" tabindex="-1" role="dialog"
      aria-labelledby="editUserLabel" aria-hidden="true"> <!--id+-->
     <div class="modal-dialog" role="document">
@@ -177,9 +196,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-<script src="../static/js/users.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="../static/js/users.js"></script>
+<!--<script src="../static/js/users.js"></script>-->
 </body>
 </html>
