--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,34 +5,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>USERS</title>
+    <link rel="stylesheet" href="../static/css/style.css"/>
     <!--<script type="text/javascript" src="users.js"></script>-->
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-<!--<script type="text/javascript">
-    $(document).ready(function () {
-        $.getJSON('http://localhost:8080/admin/users', function (json) {
-            var tr = [];
-            for (var i = 0; i < json.length; i++) {
-                tr.push('<tr>');
-                tr.push('<td>' + json[i].id + '</td>');
-                tr.push('<td>' + json[i].name + '</td>');
-                tr.push('<td>' + json[i].surname + '</td>');
-                tr.push('<td>' + json[i].age + '</td>');
-                tr.push('<td>' + json[i].username + '</td>');
-                tr.push('<td>' + json[i].password + '</td>');
-                tr.push('</tr>');
-            }
-            $('usersTbody').append($(tr.join('')));
-        })
-    });
-</script>-->
 <body>
 <nav class="navbar navbar-dark bg-dark shadow mb-2">
-    <!--<div th:object="${user}">
+    <div th:object="${user}">
         <a class="navbar-text text-white font-weight-bold" th:text="${user.username}"> </a>
         <a class="navbar-text text-white"
            th:text="' with roles : ' + ${roles}"></a>
-    </div>-->
+    </div>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
             <a class="nav-link" href="/logout">Logout</a>
@@ -63,7 +46,7 @@
                     </ul>
                     <!--Users table tab -->
                     <div class="tab-content">
-                        <div class="tab-pane fade shadow show active" id="nav-users-table">
+                        <div class="tab-pane fade shadow show active" id="nav-users-table" role="tabpanel">
                             <div class="panel-title bg-light">
                                 <h3>All users</h3>
                             </div>
@@ -81,9 +64,7 @@
                                     <th>delete</th>
                                 </tr>
                                 </thead>
-                                <tbody id="usersTbody">
 
-                                </tbody>
                             </table>
                         </div>
 
@@ -105,7 +86,7 @@
                                        placeholder="Age"
                                        required autofocus>
                                 <label class="bold-font" for="userUsernameAdd">Username</label>
-                                <input class="form-control" type="text" name="username" th:id="UserUsernameAdd"
+                                <input class="form-control" type="text" name="username" th:id="userUsernameAdd"
                                        placeholder="Username">
                                 <label class="bold-font" for="userPasswordAdd">Password:</label>
                                 <input class="form-control" type="text" name="password" id="userPasswordAdd"
@@ -120,6 +101,39 @@
                             </form>
                         </div>
                     </div>
+                </div>
+                <div class="tab-pane fade container bg-light" id="pill-user">
+                    <h1> User information-page</h1>
+                    <div class="panel-title bg-light">
+                        <h3>About user</h3>
+                    </div>
+                    <table class="table bg-white">
+                        <thead>
+                        <tr>
+                            <th>id</th>
+                            <th>name</th>
+                            <th>surname</th>
+                            <th>age</th>
+                            <th>username</th>
+                            <th>password</th>
+                            <th>role1</th>
+                            <th>role2</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ${user}>
+                            <td th:text="${user.id}">id</td>
+                            <td th:text="${user.name}">name</td>
+                            <td th:text="${user.surname}">surname</td>
+                            <td th:text="${user.age}">age</td>
+                            <td th:text="${user.username}">username</td>
+                            <td th:text="${user.password}">password</td>
+                            <td
+                                    th:each="role: ${user.getRoles()}" th:text="${role.getRole()}"
+                            ></td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -197,9 +211,9 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="../static/js/users.js"></script>
-<!--<script src="../static/js/users.js"></script>-->
 </body>
 </html>
